added nav and banner bg image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="digital.css">
 </head>
 <body>
-    
+    <header>
+        <div class="nav-container">
+            <h3 class="nav-container-title">Digital</h3>
+            <div class="logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="menus">
+                    <li>home</li>
+                    <li>service</li>
+                    <li>about</li>
+                    <li>home</li>
+            </div>
+        </div>
+        <div class="banner-container">
+            
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
